@@ -1,0 +1,24 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/MooseX-StrictConstructor/MooseX-StrictConstructor-0.150.0.ebuild,v 1.1 2011/04/14 14:18:17 tove Exp $
+
+EAPI=4
+
+MODULE_AUTHOR=DROLSKY
+MODULE_VERSION=0.15
+inherit perl-module
+
+DESCRIPTION="Make your object constructors blow up on unknown attributes"
+
+LICENSE="Artistic-2"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE="test"
+
+RDEPEND=">=dev-perl/Moose-0.94
+	dev-perl/namespace-autoclean"
+DEPEND="${RDEPEND}
+	>=virtual/perl-ExtUtils-MakeMaker-6.31
+	test? ( dev-perl/Test-Fatal )"
+
+SRC_TEST=do
