@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/MooseX-StrictConstructor
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/MooseX-StrictConstructor/ChangeLog,v 1.12 2011/04/02 11:12:41 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/MooseX-StrictConstructor/ChangeLog,v 1.13 2011/04/14 14:18:17 tove Exp $
+
+*MooseX-StrictConstructor-0.150.0 (14 Apr 2011)
+
+  14 Apr 2011; Torsten Veller <tove@gentoo.org>
+  +MooseX-StrictConstructor-0.150.0.ebuild:
+  Version bump
 
   02 Apr 2011; Torsten Veller <tove@gentoo.org>
   -MooseX-StrictConstructor-0.12.ebuild:
